--- a/organization-ejb/pom.xml
+++ b/organization-ejb/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
+            <!--suppress MavenModelInspection -->
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
@@ -41,8 +42,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>8</source>
+                    <target>8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
