--- a/app-ear/pom.xml
+++ b/app-ear/pom.xml
@@ -39,6 +39,12 @@
         </dependency>
         <dependency>
             <groupId>kz.kazmoto</groupId>
+            <artifactId>operation-ejb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>ejb</type>
+        </dependency>
+        <dependency>
+            <groupId>kz.kazmoto</groupId>
             <artifactId>rest-war</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
