--- a/operation-ejb/pom.xml
+++ b/operation-ejb/pom.xml
@@ -7,12 +7,11 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-    <groupId>kz.kazmoto</groupId>
-    <artifactId>operation</artifactId>
+    <artifactId>operation-ejb</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>ejb</packaging>
 
-    <name>operation</name>
+    <name>operation-ejb</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -23,18 +22,19 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
+            <!--suppress MavenModelInspection -->
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>kz.kazmoto</groupId>
-            <artifactId>organization-ejb</artifactId>
+            <artifactId>nomenclature-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>kz.kazmoto</groupId>
-            <artifactId>nomenclature-ejb</artifactId>
+            <artifactId>organization-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
