--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>kz.kazmoto</groupId>
     <artifactId>kazmoto-backend</artifactId>
@@ -9,9 +10,9 @@
     <modules>
         <module>app-ear</module>
         <module>rest-war</module>
-    <module>global-ejb</module>
-  <module>organization-ejb</module>
-  <module>nomenclature-ejb</module>
-  <module>operation</module>
-  </modules>
+        <module>global-ejb</module>
+        <module>organization-ejb</module>
+        <module>nomenclature-ejb</module>
+        <module>operation-ejb</module>
+    </modules>
 </project>
