--- a/rest-war/pom.xml
+++ b/rest-war/pom.xml
@@ -36,6 +36,11 @@
             <version>3.8.1</version>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.29</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <!--suppress MavenModelInspection -->
@@ -56,7 +61,7 @@
         </dependency>
         <dependency>
             <groupId>kz.kazmoto</groupId>
-            <artifactId>operation</artifactId>
+            <artifactId>operation-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
